welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:37: error: not found: value T
	setPos(T(0),T(1))
               ^